--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jotai": "^2.12.2",
     "lucide-react": "^0.487.0",
     "nanoid": "^5.1.5",
     "next": "15.3.0",
