--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "radix-ui": "^1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.2",
     "tailwind-merge": "^3.2.0",
     "tsx": "^4.19.3",
     "tw-animate-css": "^1.2.5",
